# broker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  check_lock.sh  make_solution.sh  make_solution_debug.sh  make_solution_debug_and_release-visual-studio-2017-x64.cmd  make_solution_debug_and_release-visual-studio-2017.cmd  make_solution_release.sh  version.bat  version.sh
bins/broker/: CMakeLists.txt  main.cpp
bins/broker/app/: MainApplication.cpp  MainApplication.h  SWFApplication.cpp  SWFApplication.h  broker.rc  swf_dynamic.h
bins/broker/asynchandler/: AsyncHandlerRegestry.cpp  AsyncHandlerRegestry.h  AsyncTCPHandler.cpp  AsyncTCPHandler.h
bins/broker/config/: Configuration.cpp  Configuration.h
bins/broker/connection/: Connection.cpp  Connection.h
bins/broker/defines/: Defines.h  Errors.h  Exception.cpp  Exception.h  MessageDefines.h  MiscDefines.h  ProtoBuf.h  StorageDefines.h
bins/broker/destination/: Destination.cpp  Destination.h  DestinationFactory.cpp  DestinationFactory.h  DestinationOwner.h  QueueDestination.cpp  QueueDestination.h  TemporaryQueueDestination.cpp  TemporaryQueueDestination.h  TemporaryTopicDestination.cpp  TemporaryTopicDestination.h  TopicDestination.cpp  TopicDestination.h
bins/broker/exchange/: Exchange.cpp  Exchange.h
bins/broker/log/: AsyncLogger.cpp  AsyncLogger.h  ThreadeSafeLogStream.cpp  ThreadeSafeLogStream.h
bins/broker/message/: MappedDBMessage.cpp  MappedDBMessage.h  MessageDataContainer.cpp  MessageDataContainer.h  MessageInfo.cpp  MessageInfo.h  MessagePropertyInfo.cpp  MessagePropertyInfo.h
bins/broker/misc/: CircularQueue.h  FixedSizeUnorderedMap.h  MoveableRWLock.cpp  MoveableRWLock.h  NextBindParam.h  Singleton.h
bins/broker/net/: NotificationCenter.cpp  NotificationCenter.h  ParallelSocketAcceptor.h  ParallelSocketReactor.h  ReactorHeaders.h  SocketNotification.cpp  SocketNotification.h  SocketNotifier.cpp  SocketNotifier.h  SocketReactor.cpp  SocketReactor.h
bins/broker/s2s_proto/: S2SProto.h
bins/broker/selector/: PropertyHandler.h  Selector.cpp  Selector.h  SelectorExpression.cpp  SelectorExpression.h  SelectorRegex.h  SelectorToken.cpp  SelectorToken.h  SelectorValue.cpp  SelectorValue.h
bins/broker/sender/: QueueSender.cpp  QueueSender.h  Sender.cpp  Sender.h  SenderList.cpp  SenderList.h  TopicSender.cpp  TopicSender.h
bins/broker/server/: Broker.cpp  Broker.h
bins/broker/session/: DBMSConnectionPool.cpp  DBMSConnectionPool.h  DBMSSession.cpp  DBMSSession.h  IConnectionPool.h  Session.cpp  Session.h
bins/broker/storage/: MessageStorage.cpp  MessageStorage.h
bins/broker/subscription/: Consumer.cpp  Consumer.h  Subscription.cpp  Subscription.h
bins/broker/version/: About.cpp  About.h
bins/broker/web/: ClientsPageReplacer.cpp  ClientsPageReplacer.h  ClientsRowPageReplacer.cpp  ClientsRowPageReplacer.h  DestinationRowPageReplacer.cpp  DestinationRowPageReplacer.h  IndexPageReplacer.cpp  IndexPageReplacer.h  MainPageReplacer.cpp  MainPageReplacer.h  MessagesPageReplacer.cpp  MessagesPageReplacer.h  MessagesRowPageReplacer.cpp  MessagesRowPageReplacer.h  QueuesPageReplacer.cpp  QueuesPageReplacer.h  TemplateParamReplacer.cpp  TemplateParamReplacer.h  TopicsPageReplacer.cpp  TopicsPageReplacer.h  WebAdminRequestHandler.cpp  WebAdminRequestHandler.h  WebAdminRequestHandlerFactory.cpp  WebAdminRequestHandlerFactory.h
examples/simpleconsumer/: CMakeLists.txt  QReceiver.cpp  TSubscriber.cpp  main.cpp
examples/simpleproducer/: CMakeLists.txt  QSender.cpp  TPublisher.cpp  main.cpp
libs/libupmq/: CMakeLists.txt  libupmq.rc
libs/libupmq/cms/: AsyncCallback.h  BytesMessage.h  CMSException.cpp  CMSException.h  CMSProperties.h  CMSSecurityException.cpp  CMSSecurityException.h  Closeable.h  Config.h  Connection.h  ConnectionFactory.h  ConnectionMetaData.h  DeliveryMode.h  Destination.h  ExceptionListener.h  IllegalStateException.cpp  IllegalStateException.h  InvalidClientIdException.cpp  InvalidClientIdException.h  InvalidDestinationException.cpp  InvalidDestinationException.h  InvalidSelectorException.cpp  InvalidSelectorException.h  MapMessage.h  Message.h  MessageConsumer.h  MessageEOFException.cpp  MessageEOFException.h  MessageEnumeration.h  MessageFormatException.cpp  MessageFormatException.h  MessageListener.h  MessageNotReadableException.cpp  MessageNotReadableException.h  MessageNotWriteableException.cpp  MessageNotWriteableException.h  MessageProducer.h  NullFormatException.cpp  NullFormatException.h  NumberFormatException.cpp  (+22 more)
libs/libupmq/libupmq/: BytesMessageImpl.cpp  BytesMessageImpl.h  ConnectionFactoryImpl.cpp  ConnectionFactoryImpl.h  ConnectionImpl.cpp  ConnectionImpl.h  ConnectionMetaDataImpl.cpp  ConnectionMetaDataImpl.h  ConsumerImpl.cpp  ConsumerImpl.h  DecafSingleton.cpp  DecafSingleton.h  DestinationImpl.cpp  DestinationImpl.h  ExceptionImpl.h  MapMessageImpl.cpp  MapMessageImpl.h  MessageEnumerationImpl.cpp  MessageEnumerationImpl.h  MessageFactoryImpl.cpp  MessageFactoryImpl.h  MessageImpl.cpp  MessageImpl.h  MessageTemplate.h  ObjectMessageImpl.cpp  ObjectMessageImpl.h  ProducerImpl.cpp  ProducerImpl.h  ProtoHeader.h  SessionImpl.cpp  SessionImpl.h  StreamMessageImpl.cpp  StreamMessageImpl.h  TextMessageImpl.cpp  TextMessageImpl.h  Util.h
libs/libupmqprotocol/: CMakeLists.txt  protocol.proto
tests/brokertest/: AsyncSenderTest.cpp  AsyncSenderTest.h  BytesMessageTest.cpp  BytesMessageTest.h  CMSListener.cpp  CMSListener.h  CMSProvider.cpp  CMSProvider.h  CMakeLists.txt  ClientAckTest.cpp  ClientAckTest.h  ConnectionStartStopTest.cpp  ConnectionStartStopTest.h  DurableTest.cpp  DurableTest.h  IntegrationCommon.cpp  IntegrationCommon.h  JmsMessageGroupTest.cpp  JmsMessageGroupTest.h  MapMessageTest.cpp  MapMessageTest.h  MessageTest.cpp  MessageTest.h  QueueBrowserTest.cpp  QueueBrowserTest.h  SelectorTest.cpp  SelectorTest.h  SimpleRollbackTest.cpp  SimpleRollbackTest.h  SimpleTest.cpp  SimpleTest.h  StreamMessageTest.cpp  StreamMessageTest.h  TextMessageTest.cpp  TextMessageTest.h  TransactionTest.cpp  TransactionTest.h  main.cpp
(+727 files in other folders)
